<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Menu item text [CHAR LIMIT=NONE] -->
    <string name="accounts">Accounts</string>

    <!-- Dialog button [CHAR LIMIT=NONE] -->
    <string name="add_account">Add account</string>

    <!--  Name of the application in the launcher [CHAR LIMIT=NONE] -->
    <string name="app_name">AssistedFreedom</string>

    <!-- Dialog title text [CHAR LIMIT=NONE] -->
    <string name="attention">Attention</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="connect">Connect</string>

    <!-- Message text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="connect_text">This application requests permission to connect your mobile device to the cloud.</string>

    <!-- Header text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="connect_to_the_cloud">Connect To The Cloud</string>

    <!-- Header text for "Connected" screen [CHAR LIMIT=NONE] -->
    <string name="connected_to_the_cloud">Connected To The Cloud</string>

    <!-- Message text [CHAR LIMIT=NONE] -->
    <string name="contacting_server">Contacting server...</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="disconnect">Disconnect</string>

    <!-- Informational text for "Connected" screen with placeholder for account name [CHAR LIMIT=NONE] -->
    <string name="disconnect_text">This device is currently connected to the cloud as %1$s.</string>

    <!-- Footer text for "Connect" screen [CHAR LIMIT=NONE] -->
    <string name="do_you_want_to_connect">Do you want to connect?</string>

    <!-- Footer text for "Disconnect" screen [CHAR LIMIT=NONE] -->
    <string name="do_you_want_to_disconnect">Do you want to disconnect?</string>

    <!-- Initial "hello, world" informational message [CHAR LIMIT=NONE] -->
    <string name="hello_world_info_text">Press the \"Say Hello\" button to receive a message from the App Engine server.</string>

    <!-- Initial "hello, world" response message [CHAR LIMIT=NONE] -->
    <string name="hello_world_text"></string>

    <!-- Dialog message text [CHAR LIMIT=NONE] -->
    <string name="needs_account">To receive notifications from this app, you must first create an account.</string>

    <!-- Notification message [CHAR LIMIT=NONE] -->
    <string name="registration_error">Failed to register/unregister %1$s.</string>

    <!-- Notification message [CHAR LIMIT=NONE] -->
    <string name="registration_succeeded">Registered %1$s for C2DM messaging.</string>

    <!-- Button text [CHAR LIMIT=NONE] -->
    <string name="say_hello">Say Hello</string>

    <!-- List view header text [CHAR LIMIT=NONE] -->
    <string name="select_account">Select the account you wish to authorize:</string>

    <!-- Dialog button text [CHAR LIMIT=NONE] -->
    <string name="skip">Skip</string>

    <!-- Notification message [CHAR LIMIT=NONE] -->
    <string name="unregistration_succeeded">Unegistered %1$s for C2DM messaging.</string>
    
    <string name="event_description">Event Description:</string>
    <string name="no_new_event">No new event to display</string>
    <string name="event_due_date">Event Due Date:</string>
    <string name="event_desc">Event Description</string>
    <string name="event_timedate">Event Time &amp; Date</string>
    <string name="remind_me_later">Remind Me Later</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="reject">Reject</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_service_control">Service Control</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="menu_torch">Torch</string>
    <string name="menu_about">About</string>
    <string name="service_started">Service started</string>
    <string name="service_stopped">Service stopped</string>
    <string name="about_title">About This App</string>
    <string name="about_msg">This is the client application for ITB7301 \"Assisted Living Event Orgainser\" Project.\n\nStudent: Ziqiang Gao (Declan)\nSupervisor: Tim Hunt</string>
    <string name="about_ok">OK</string>
    <string name="progress_title">Please wait...</string>
    <string name="progress_msg">Downloading events from the server...</string>
    <string name="toast_download_finished">Events download finished</string>
    <string name="no_internet_title">Error</string>
    <string name="no_internet_msg">No internet connection detected!\nYou need to enable 3G or Wi-Fi in order to use this app.</string>
    <string name="no_internet_ok">OK</string>
    <string name="torch_quit">Touch anywhere to quit</string>
    
    <string name="pref_app_settings">Application Settings</string>
    <string name="pref_ringtone">Rongtone Preference</string>
    <string name="pref_ringtone_summary">Select ringtone for alarms</string>
    <string name="pref_autodownload">Download events on startup</string>
    <string name="pref_autodownload_summary">Turn it off if you prefer to download manually</string>
    <string name="pref_refersh_interval">Refersh Interval</string>
    <string name="pref_refersh_interval_summary">Set the number of hours between two refresh operations</string>
    <string name="pref_refersh_interval_title">Enter the number of hours</string>
    <string name="pref_email">Email Address</string>
    <string name="pref_email_summary">Setup to use your own favourite Email address instead of GMail</string>
    <string name="pref_email_title">Enter a new Email address</string>
    <string name="pref_carer_settings">Carer Seetings</string>
    <string name="pref_carer_management">Carer Management</string>
    <string name="pref_carer_management_summary">Manage carers and Email notifications</string>
    <string name="pref_carer_management_title">Enter an Email address</string>
    
    <string name="pref_delay_time">Delay Time</string>
    <string name="pref_delay_time_summary">Set remind me later delay time</string>
    <string name="pref_delay_time_title">Enter a new number in minutes:</string>
    <string name="pref_email_msg">Email Message</string>
    <string name="pref_email_msg_summary">Email message you want to send to carer</string>
    <string name="pref_email_msg_title">Enter Message Body:</string>
    <string name="pref_email_subject">Email Subject</string>
    <string name="pref_email_subject_summary">Email subject you want to send to carer</string>
    <string name="pref_email_subject_title">Enter Message Subject:</string>
    <string name="menu_carer_man">Carer Management</string>
    <string name="menu_carer_add">Add Carer</string>
    <string name="menu_carer_set_time">Set Send Time</string>
    <string name="layout_edit_carer_name">Name:   </string>
    <string name="layout_edit_carer_name_hint">Name of the carer</string>
    <string name="layout_edit_carer_email">Email:    </string>
    <string name="layout_edit_carer_email_hint">Email address of the carer</string>
    <string name="layout_edit_carer_repeat">Repeat Interval: </string>
    <string name="layout_edit_carer_repeat_hint">How many days?</string>
    <string name="layout_edit_carer_btn">Save and enable Email notification</string>
    <string name="layout_carer_list">Carer List</string>
    <string name="layout_add_carer_add">Add</string>
    <string name="layout_emailalarm_btn">Press to send Email</string>
    <string name="alarmreceiver_ack">Acknowledge sent</string>
    <string name="email_alarm_receiver_title">Select an Email application</string>

</resources>
