<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
		android:id="@+id/settings"
		android:title="@string/menu_settings"
		android:showAsAction="ifRoom"
		android:icon="@drawable/settings1">
        
    </item>
    <item
		android:id="@+id/serviceControl"
		android:title="@string/menu_service_control"
		android:showAsAction="always"
		android:icon="@drawable/service1">
        <menu>
            <group android:id="@+id/group1">
                <item
					android:id="@+id/startService"
					android:title="@string/start_service"
					android:icon="@drawable/start"/>
                <item
					android:id="@+id/stopService"
					android:title="@string/stop_service"
					android:icon="@drawable/stop"/>
            </group>
        </menu>
    </item>
    
    <item
		android:id="@+id/torch"
		android:title="@string/menu_torch"
		android:showAsAction="never"
		android:icon="@drawable/light"
		>
    </item>
    <item
		android:id="@+id/about"
		android:title="@string/menu_about"
		android:showAsAction="never"
		android:icon="@drawable/about"
		>
    </item>

</menu>