<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >



    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_desc"
        android:textAppearance="?android:attr/textAppearanceLarge" />



    <TextView
        android:id="@+id/tvTD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_timedate"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remind_me_later" />

    </LinearLayout>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center" >
        
        <Button
	        android:id="@+id/btnAck"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/acknowledge" />

    	<Button
    	    android:id="@+id/btnDeny"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="0.5"
    	    android:text="@string/reject" />
    	
    </LinearLayout>

</LinearLayout>